--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     height: 100vh;
-    background-color: rgb(203, 133, 133);
+    background-color: rgb(223, 214, 214);
 }
 
 body::-webkit-scrollbar{
@@ -443,3 +443,14 @@ button {
     font-size: 12px;
 }
 
+
+/* container 3 */
+
+.container3 {
+    margin-top: 30px;
+    height: 120px;
+    width: 100%;
+    background-color: #FFDB58;
+}
+
+/* end of container 3 */
