--- a/style.css
+++ b/style.css
@@ -260,6 +260,36 @@ button {
     transform: rotate(15deg);
 }
 
+.boxheart, .heartpop, .confetti, .con3star{
+    position: absolute;
+    height: 200px;
+}
+
+.boxheart {
+    top: 1300px;
+    transform: rotate(10deg);
+    left: 180px;
+}   
+
+.confetti {
+    top: 1000px;
+    transform: rotate(10deg);
+    left: 180px;
+}   
+
+.heartpop {
+    top: 1100px;
+    transform: rotate(20deg);
+    right: 150px;
+}
+
+.con3star {
+    height: 120px;
+    top: 1500px;
+    right: 155px;
+}
+
+
 /* absolute end */
 
 /* letter */
@@ -448,9 +478,126 @@ button {
 
 .container3 {
     margin-top: 30px;
-    height: 120px;
     width: 100%;
-    background-color: #FFDB58;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.moments-container {
+    height: 700px;
+    width: 50%;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.moment{
+    height: 200px;
+    width: 150px;
+    border: 5px solid black;
+}
+
+.moment1 {
+    height: 180px;
+    width: 150px;
+    border: 5px solid black;
+}
+
+.moment:hover, .moment1:hover {
+    transform: scale(1.1);
+}
+
+.moment, .moment1{
+    transition: transform 2s ease;
+}
+
+
+.img1 {
+    background: url(image/photo_2024-11-05_04-58-34.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img2 {
+    background: url(image/img2.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img3 {
+    background: url(image/img3.jpg);
+    background-position: 70%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img4 {
+    background: url(image/img4.jpg);
+    background-position: 70%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img5 {
+    background: url(image/img5.jpg);
+    background-position: 70%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img6 {
+    background: url(image/img6.jpg);
+    background-position: 70%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img7 {
+    background: url(image/img8.jpg);
+    background-position: 70%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img8 {
+    background: url(image/img9.jpg);
+    background-position: 70%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img9 {
+    background: url(image/img10.jpg);
+    background-position: 70%;
+    background-size: contain;
+    background-color: black;
+    background-repeat: no-repeat;
+}
+
+.img10 {
+    background: url(image/img11.jpg);
+    background-position: 70%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img11 {
+    background: url(image/7.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.img12 {
+    background: url(image/photo_2024-11-07_16-26-28.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 /* end of container 3 */
