--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ button {
 .songwhat {
     font-size: 10px;
     width: 100%;
-    color: rgb(103, 103, 103);
+    color: gray;
     margin-bottom: 0;
 }
 
