--- a/style.css
+++ b/style.css
@@ -622,3 +622,636 @@ title {
 }
 
 /* end of container 3 */
+
+
+@media screen and (min-width: 1366px) {
+
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: 0;
+    }
+    
+    body {
+        height: 100vh;
+        background-color: rgb(223, 214, 214);
+    }
+    
+    body::-webkit-scrollbar{
+        width: 0;
+    }
+    
+    button {
+        cursor: pointer;
+        
+    }
+    
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+    
+    .image-container {
+        height: 500px;
+        width: 70%;
+        display: flex;
+    }
+    
+    /* first container */
+    
+    .left {
+        height: 100%;
+        width: 25%;
+        border-radius: 1px solid black;
+    }
+    
+    /* left container */
+    
+    .fan {
+        height: 20%;
+    }
+    
+    .upper-left {
+        height: 40%;
+        width: 100%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        padding-left: 20px ;
+    }
+    
+    .fan {
+        height: 70%;
+        transform: rotate(-10deg);
+    }
+    
+    .middle-left {
+        height: 40%;
+        width: 100%;
+        text-align: end;
+        padding-left: 10px;
+    }
+    
+    .qoute {
+        background-color: #ff2e98; 
+        color: white;
+        box-decoration-break: clone;
+        display: inline; 
+        font-size: 12px;   
+    }
+    
+    .ticket {
+        height: 60%;
+        transform: rotate(-15deg);
+    }
+    
+    .lower-left {
+        height: 20%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding-left: 20px;
+    }
+    
+    .heart {
+        height: 100%;
+        margin-top: -10px;
+    }
+    
+    /* left container end */
+    
+    .middle {
+        height: 100%;
+        width: 50%;
+        border-radius: 1px solid black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    /* middle container */
+    
+    .upper {
+        height: 15%;
+        width: 90%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        padding-bottom: 8px;
+    }
+    
+    .readMe {
+        height: 28px;
+        width: 30%;
+        border-radius: 30px;
+        font-size: 10px;
+        border: 1px solid black;
+    }
+    
+    .her-image {
+        border: 3px solid black;
+        height: 70%;
+        width: 80%;
+        background: url(image/my\ nurse.jpg);
+        background-position: center;
+        background-size: contain;
+        /* background-repeat: no-repeat; */
+    }
+    
+    .song {
+        width: 100%;
+        height: 20%;
+        display: flex;
+        padding-top: 5px;
+        justify-content: center;
+    }
+    
+    .song-container {
+        width: 92%;
+        height: 60%;
+        border-radius: 10px;
+        background-color: #FFC1CF;
+        padding: 7px;
+        display: flex;
+        align-items: center;
+    }
+    
+    .music-photo {
+        height: 100%;
+        width: 25%;
+        background-color: white;
+        border-radius: 15px;
+        background: url(image/our.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .mid-song {
+        height: 100%;
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        padding: 0 10px;
+        gap: 5px;
+    }
+    
+    .forU {
+        font-size: 10px;
+        width: 100%;
+        color: rgb(103, 103, 103);
+        margin-bottom: 0;
+    }
+    
+    #range {
+        width: 100%;
+        height: 1px;
+    }
+    
+    .songDuration {
+        font-size: 10px;
+    }
+    
+    #currentTime {
+        font-size: 10px;
+    }
+    
+    .time {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .play-button {
+        width: 10%;
+        height: 70%;
+        border: 1px solid black;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+    
+    title {
+        background-color: transparent;
+        border: 1px solid black;
+    }
+    
+    /* end of middle container */
+    
+    .right {
+        height: 100%;
+        width: 25%;
+        border-radius: 1px solid black;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    /* start of right container */
+    
+    .upper-right {
+        height: 60%;
+        display: flex;
+        align-items: center;
+        padding-bottom: 0;
+        padding-left: 20px;
+        padding-bottom: 20px;
+        align-items: flex-end;
+    }
+    
+    .right-letter {
+        height: 60%;
+        width: 80%;
+        padding: 10px;
+        background-color: pink;
+        text-align: justify;
+    }
+    
+    .sticky {
+        font-size: 12px;
+    }
+    
+    .lower-right {
+        height: 40%;
+    }
+    
+    .disc {
+        margin-top: 20px;
+        margin-left: 40px;
+        height: 40%;
+        transform: rotate(15deg);
+    }
+    
+    /* end of right container */
+    
+    
+    /* end of first container */
+    
+    /* absolute */
+    
+    .star {
+        position: absolute;
+        height: 120px;
+        top: 60px;
+        left: 800px
+    }
+    
+    .pink-heart {
+        position: absolute;
+        height: 60px;
+        top: 350px;
+        left: 460px;
+        transform: rotate(-10deg);
+    }
+    
+    .tulips {
+        position: absolute;
+        height: 120px;
+        top:240px;
+        right: 380px;
+        transform: rotate(15deg);
+    }
+    
+    .boxheart, .heartpop, .confetti, .con3star{
+        position: absolute;
+        height: 200px;
+    }
+    
+    .boxheart {
+        top: 1300px;
+        transform: rotate(10deg);
+        left: 180px;
+    }   
+    
+    .confetti {
+        top: 1000px;
+        transform: rotate(10deg);
+        left: 180px;
+    }   
+    
+    .heartpop {
+        top: 1100px;
+        transform: rotate(20deg);
+        right: 200px;
+    }
+    
+    .con3star {
+        height: 120px;
+        top: 1500px;
+        right: 200px;
+    }
+    
+    
+    /* absolute end */
+    
+    /* letter */
+    
+    .letter {
+        position: absolute;
+        z-index: 2;
+        height: 80%;
+        width: 40%;
+        margin-left: 38%;
+        margin-top: 5%;
+        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+        opacity: 0;
+        transform: scale(0.3);
+        pointer-events: none;
+        max-height: 700px; 
+        overflow-y: auto; 
+        padding: 10px;
+    }
+    
+    /* .letter {
+        position: absolute;
+        z-index: 2;
+        overflow-y: auto;
+        height: 80%;
+        width: 40%;
+        margin-top: 4%;
+        transform: scale(1);
+        margin-left: 35%;
+    } */
+    
+    .paper {
+        height: 80%;
+        width: 60%;
+    }
+    
+    .heartLetter {
+        position: absolute;
+        height: 120px;
+        top: 0;
+        left: 200px;
+    }
+    
+    
+    .letter::-webkit-scrollbar {
+        width: 0px;
+    }
+    
+    .js-letter.letter {
+        animation: popIn 0.8s ease forwards;
+        pointer-events: auto; 
+        padding: 0;
+        
+    }
+    
+    @keyframes popOut {
+        0% {
+            transform: scale(1);
+            opacity: 1;
+        }
+        50% {
+            transform: scale(1.05);
+            opacity: 0.5;
+        }
+        100% {
+            transform: scale(0.3);
+            opacity: 0;
+        }
+    }
+    
+    @keyframes popIn {
+        0% {
+            transform: scale(0.3);
+            opacity: 0;
+        }
+        50% {
+            transform: scale(1.05);
+            opacity: 1;
+        }
+        100% {
+            transform: scale(1);
+            opacity: 1;
+        }
+    }
+    
+    
+    .js-letter.pop-out {
+        animation: popOut 0.5s ease forwards;
+        pointer-events: none; 
+    }
+    
+    .letterForher{
+        font-size: 20px;
+    }
+    
+    .letterContainer {
+        padding: 0;
+        margin: 0;
+        background-color: #FFDB58;
+        padding: 50px;
+    }
+    
+    
+    .letterTitle, .mainLetter {
+        font-size: 12px;
+        font-family: "Playwrite GB S", cursive;
+    }
+    
+    
+    .mainLetter{
+        text-align:justify;
+    }
+    
+    
+    /* end of letter */
+    
+    .container2 {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    
+    }
+    
+    .title {
+        height: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px;   
+    }
+    
+    .desc {
+        border: 1px solid black;
+        padding: 10px 20px;
+        font-size: 12px;
+        border-radius: 30px;
+        background-color: white; 
+    }
+    
+    .pictures {
+        height: 350px;
+        width: 60%;
+        padding: 5px;
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .box {
+        height: 100px;
+        width: 150px;
+    }
+    
+    .box1 {
+        height: 100px;
+        width: 170px;
+    }
+    
+    .boxes-action{
+        display: flex;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        border: none;
+        border-radius: 10px;
+        background-color:#f4f4f4;
+        transition: transform 2s ease;
+        padding: 5px
+        /* box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5); */
+    }
+    
+    .boxes-action:hover {
+        transform: scale(1.1);
+    }
+    
+    .aboutYou {
+        font-size: 12px;
+    }
+    
+    
+    /* container 3 */
+    
+    .container3 {
+        margin-top: 30px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .moments-container {
+        height: 700px;
+        width: 50%;
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+        flex-direction: column;
+        padding: 10px;
+    }
+    
+    .moment{
+        height: 200px;
+        width: 150px;
+        border: 5px solid black;
+    }
+    
+    .moment1 {
+        height: 180px;
+        width: 150px;
+        border: 5px solid black;
+    }
+    
+    .moment:hover, .moment1:hover {
+        transform: scale(1.1);
+    }
+    
+    .moment, .moment1{
+        transition: transform 2s ease;
+    }
+    
+    
+    .img1 {
+        background: url(image/photo_2024-11-05_04-58-34.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .img2 {
+        background: url(image/img2.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .img3 {
+        background: url(image/img3.jpg);
+        background-position: 70%;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .img4 {
+        background: url(image/img4.jpg);
+        background-position: 70%;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .img5 {
+        background: url(image/img5.jpg);
+        background-position: 70%;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .img6 {
+        background: url(image/img6.jpg);
+        background-position: 70%;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .img7 {
+        background: url(image/img8.jpg);
+        background-position: 70%;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .img8 {
+        background: url(image/img9.jpg);
+        background-position: 70%;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .img9 {
+        background: url(image/img10.jpg);
+        background-position: 70%;
+        background-size: contain;
+        background-color: black;
+        background-repeat: no-repeat;
+    }
+    
+    .img10 {
+        background: url(image/img11.jpg);
+        background-position: 70%;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .img11 {
+        background: url(image/7.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .img12 {
+        background: url(image/photo_2024-11-07_16-26-28.jpg);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }  
+
+}
